# doujin-site

./: .gitignore  Gemfile  LICENSE  Makefile  _config.yml  about.html  cabal.project  cabal.project.freeze  comic-market-91.html  credit.html  cspell.json  doujin-site.cabal  events.html  hie.yaml  index.html  index.md  introduction-yesod-1.html  introduction-yesod-commercial.html  introduction-yesod.html  procedural-haskell.html  style.css  tech-book-fest-2.html  tech-book-fest-4.html  tech-book-fest-5.html  tech-book-fest-6.html  tech-book-fest-7.html  tech-book-fest.html  type-reconstruction.html
.github/workflows/: deploy.yaml
_includes/: footer.html  header.html
_layouts/: book.html  home.html  page.html
_posts/: 2018-01-24-introduction-yesod-1.markdown  2018-01-24-welcome-to-jekyll.markdown  2018-01-25-introduction-yesod.markdown  2018-01-25-welcome-to-jekyll.markdown  2018-04-03-procedural-haskell.markdown  2019-07-11-introduction-yesod.markdown  2019-07-11-type-reconstructin.markdown  2019-07-11-unkown.markdown
_sass/: book.scss  footer.scss  header.scss  home.scss
_sass/minima/: _base.scss
app/: gen.hs
assets/: main.scss
content/: CNAME  about.hs  content.cabal  credit.hs  events.hs  index.hs
content/book/: 01-introduction-yesod-1.hs  02-introduction-yesod.hs  03-procedural-haskell.hs  04-introduction-yesod-commercial.hs  05-type-reconstruction.hs  06-dark-room-printing.hs  07-monad-drill.hs  1-introduction-yesod-1.hs  2-introduction-yesod.hs  3-procedural-haskell.hs  4-introduction-yesod-commercial.hs  5-type-reconstruction.hs
content/event/: 01-tech-book-fest.hs  02-comic-market-91.hs  03-tech-book-fest-2.hs  04-tech-book-fest-4.hs  05-tech-book-fest-5.hs  06-tech-book-fest-6.hs  07-tech-book-fest-7.hs  08-tech-book-fest-8.hs  09-tech-book-fest-9.hs  1-tech-book-fest.hs  10-tech-book-fest-10.hs  11-tech-book-fest-11.hs  12-tech-book-fest-12.hs  13-tech-book-fest-13.hs  14-tech-book-fest-14.hs  18-tech-book-fest-18.hs  2-comic-market-91.hs  3-tech-book-fest-2.hs  4-tech-book-fest-4.hs  5-tech-book-fest-5.hs  6-tech-book-fest-6.hs  7-tech-book-fest-7.hs
content/lib/: Author.hs  Book.hs  Event.hs  Layout.hs  Publication.hs  Site.hs
content/style/: book.css  footer.css  header.css  home.css  list.css  main.css  minima.css
lib/: Data.hs
