cabal-version:       2.2

name:                doujin-site
version:             0.1.0.0
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
build-type:          Simple

common common
  build-depends:       base >= 4 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wmissing-exported-signatures
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-name-shadowing
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-import-lists
                       -Wmonomorphism-restriction
  default-language:    Haskell2010

library
  import:              common
  hs-source-dirs:      lib
  exposed-modules:     Data
  build-depends:       binary,
                       lucid,
                       text

executable gen
  import:              common
  hs-source-dirs:      app
  main-is:             gen.hs
  build-depends:       doujin-site,
                       hint,
                       lucid,
                       shake,
                       with-utf8
  ghc-options:         -threaded
                       -rtsopts "-with-rtsopts=-I0 -qg"
                       -- Shake recommendation https://hackage.haskell.org/package/shake-0.19.8/docs/Development-Shake.html#g:2
