cabal-version:       2.2

name:                content
version:             0.1.0.0
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
build-type:          Simple

common common
  build-depends:       base >= 4 && < 5,
                       doujin-site,
                       containers,
                       lucid,
                       text
  default-language:    Haskell2010

common executable
  import:              common
  build-depends:       content

library
  import:              common
  hs-source-dirs:      lib
  exposed-modules:     Author,
                       Book,
                       Event,
                       Layout,
                       Publication,
                       Site

executable introduction-yesod-1
  import:           executable
  hs-source-dirs:   book
  main-is:          1-introduction-yesod-1.hs

executable introduction-yesod
  import:           executable
  hs-source-dirs:   book
  main-is:          2-introduction-yesod.hs

executable procedural-haskell
  import:           executable
  hs-source-dirs:   book
  main-is:          3-procedural-haskell.hs

executable introduction-yesod-commercial
  import:           executable
  hs-source-dirs:   book
  main-is:          4-introduction-yesod-commercial.hs

executable type-reconstruction
  import:           executable
  hs-source-dirs:   book
  main-is:          5-type-reconstruction.hs

executable tech-book-fest
  import:           executable
  hs-source-dirs:   event
  main-is:          1-tech-book-fest.hs

executable index
  import:           executable
  hs-source-dirs:   .
  main-is:          index.hs

executable events
  import:           executable
  hs-source-dirs:   .
  main-is:          events.hs

executable about
  import:           executable
  hs-source-dirs:   .
  main-is:          about.hs

executable credit
  import:           executable
  hs-source-dirs:   .
  main-is:          credit.hs
